# marimba

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
config/: coverage.ini  mypy.ini  pytest.ini  ruff.toml
docs/: contributing.md  environment.md
marimba/: main.py
marimba/core/cli/: delete.py  new.py
marimba/core/distribution/: dap.py  s3.py
marimba/core/installer/: pipeline_installer.py  uv_executor.py
marimba/core/parallel/: pipeline_loader.py
marimba/core/schemas/: darwin.py  generic.py  ifdo.py
marimba/core/utils/: config.py  dataset.py  hash.py  log.py  manifest.py  map.py  paths.py  prompt.py  summary.py
marimba/core/wrappers/: collection.py  dataset.py  pipeline.py  project.py  target.py
marimba/lib/: concurrency.py  decorators.py  image.py  video.py
tests/: conftest.py  test_main.py  test_py_typed.py
tests/core/: test_pipeline.py
tests/core/cli/: test_delete.py  test_new.py
tests/core/distribution/: test_dap.py  test_s3.py
tests/core/installer/: test_pipeline_installer.py  test_uv_executor.py
tests/core/parallel/: test_pipeline_loader.py
tests/core/schemas/: test_base.py  test_darwin.py  test_generic.py  test_ifdo.py
tests/core/utils/: test_config.py  test_dataset.py  test_dependencies.py  test_hash.py  test_ifdo.py  test_manifest.py  test_map.py  test_metadata.py  test_paths.py  test_prompt.py  test_rich.py
tests/core/wrappers/: test_dataset.py  test_pipeline.py  test_project.py  test_target.py
tests/e2e/: conftest.py  test_basic_workflow.py  test_collection.py  test_dataset.py  test_distribution.py  test_pipeline.py  test_project.py
tests/lib/: test_concurrency.py  test_decorators.py  test_exif.py  test_gps.py  test_image.py  test_video.py
